--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -8,6 +8,7 @@ header{
 header a{
     color: #FFF;
     font-size: 20px;
+    text-decoration: none;
 }
 
 header a{
@@ -15,6 +16,10 @@ header a{
 }
 
 .menu{
-    margin-top: 180px;
+    margin-top: 80px;
     margin-right: 10px;
+}
+
+.imagemLogo{
+    width: 200px;
 }
