--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -1,6 +1,7 @@
 .listaDeFuncionarios{
     margin-left: 30px;
     margin-right: 30px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .pesquisarCadastrar{
