--- a/src/pages/Cadastro/cadastro.css
+++ b/src/pages/Cadastro/cadastro.css
@@ -5,4 +5,5 @@
     text-align: center;
     justify-content: center;
     height: 80vh;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
