--- a/src/pages/Esquecisenha/esquecisenha.css
+++ b/src/pages/Esquecisenha/esquecisenha.css
@@ -4,4 +4,5 @@
     align-items: center;
     justify-content: center;
     height: 80vh;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
