separação de componentes e alguns ajustes

--- a/src/pages/Login/login.css
+++ b/src/pages/Login/login.css
@@ -6,3 +6,7 @@
     height: 88vh;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+
+.telaLogin a{
+    text-decoration: nome;
+}
