--- a/src/pages/Logout/logout.css
+++ b/src/pages/Logout/logout.css
@@ -6,3 +6,7 @@
     height: 80vh;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+
+.principal a{
+    text-decoration: none;
+}
